# ScholarAgent

./: .env.example  .gitignore  README.md  SemanticScholarAPI.py  pyproject.toml  requirements.txt  scholar.py  tools.py
src/scholaragent/: __init__.py  _endpoints.py  agent.py  cli.py  client.py  tools.py
tests/: test_client.py  test_endpoints.py  test_tools.py
