[project]
name = "scholaragent"
version = "0.1.0"
description = "AI-powered literature search agent using Semantic Scholar"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "requests-ratelimiter>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "ruff>=0.8",
]

[project.scripts]
scholaragent = "scholaragent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scholaragent"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
